--- a/index.html
+++ b/index.html
@@ -2,14 +2,71 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <link rel="stylesheet" href=main.css" />
-  <title>Stylesheet for test
+  <title>Apple Products</title>
+  <link rel="stylesheet" href="main.css">
+  <title>
   </title>
   <script src=main.js></script>
 
 </head>
 <body>
+
+<!--//*** Product page ***//-->
+    <div class="product-container">
+
+<!--//*** Product page ***//-->
+    <div class="product-card-1">
+        <div class="header">
+             <header>
+                <h2>2017 Macbook Pro</h2>
+            <header>    
+        </div>
+<!--/***** Header *****/-->
+
+        <div class="section-one">
+            <div class="product-image">
+            <img src="https://www.bhphotovideo.com/images/images2500x2500/apple_muhr2ll_a_13_3_macbook_pro_with_1492890.jpg" alt="Macbook Pro"/>
+            </div>
+            <div>
+                <div class="product-description">
+                    <p>The silver mid 2019 Apple 13.3" MacBook Pro with Touch Bar delivers an 8th Generation Intel Quad-Core processor, Touch Bar and Touch ID, True Tone display technology, Apple's T2 security chip, and immersive speakers with wide stereo sound across the entire 13.3" MacBook Pro lineup. All of this helps to create a more powerful and versatile system</p>
+                </div>
+
+                <div class="product-availability">
+                    <p>Available</p>
+                </div>
+            </div>
+
+    </div> <!--Product 1 card end-->
+
+    <div class="section-two">
+
+        <div class="specifications-header">
+            <h3></h3>
+            <ul class="specifications">
+                <li>15"</li>
+                <li> 2 lbs</li>
+            </ul>
+        </div>
+
+        <footer>Specifications valid until 10/04</footer>
+    <div>
+
+    <div class="section-three">
+        <div class="pricing-header">
+            <h3>Pricing</h3>
+            <ul class="pricing">
+                <li>1: $20</li>
+                <li>2-10: $16</li>
+                <li>10-100: $10</li>
+            </ul>
+        </div>
+
+    </div>
+</div>
+</div> <!--Product page end-->
+
+
 
 
 
