--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <div class="product-card-1">
             <div class="header">
                 <header>
-                    <h2>2017 Macbook Pro</h2>
+                    <h2>Apple 13.3" MacBook Pro</h2>
                 </header>    
             </div>
             <div class="section-one">
                 <div class="product-image">
-                <img src="https://www.bhphotovideo.com/images/images2500x2500/apple_muhr2ll_a_13_3_macbook_pro_with_1492890.jpg" alt="Macbook Pro"/>
+                <img src="https://media.wired.com/photos/5e9f56f143e5800008514457/1:1/w_1277,h_1277,c_limit/Gear-Feature-Apple_new-iphone-se-white_04152020.jpg" alt="Macbook Pro"/>
                 </div>
                 <div>
                     <div class="product-description">
@@ -77,8 +77,8 @@
                 <div class="specifications-header">
                     <h3>Specifications</h3>
                     <ul class="specifications">
-                        <li>Size: 15"</li>
-                        <li>Weight: 2 lbs</li>
+                        <li>Size: 13.3"</li>
+                        <li>Weight: 1 lbs</li>
                     </ul>
                 </div>
                 <footer>Specifications valid until 10/04</footer>
@@ -87,9 +87,9 @@
                 <div class="pricing-header">
                     <h3>Pricing</h3>
                     <ul class="pricing">
-                        <li>1: $20</li>
-                        <li>2-10: $16</li>
-                        <li>10-100: $10</li>
+                        <li>1: $30</li>
+                        <li>2-10: $80</li>
+                        <li>10-100: $100</li>
                     </ul>
                 </div>
             </div>
