Added Ipad Mini Pic

--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
         <div class="product-card-1">
             <div class="header">
                 <header>
-                    <h2>2017 Macbook Pro</h2>
+                    <h2>2017 Ipad Mini</h2>
                 </header>    
             </div>
             <div class="section-one">
                 <div class="product-image">
-                <img src="https://www.bhphotovideo.com/images/images2500x2500/apple_muhr2ll_a_13_3_macbook_pro_with_1492890.jpg" alt="Macbook Pro"/>
+                <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/ipad-mini-select-wifi-spacegray-201911_FMT_WHH?wid=1000&hei=1000&fmt=jpeg&qlt=95&op_usm=0.5,0.5&.v=1573825365923" alt="Macbook Pro"/>
                 </div>
                 <div>
                     <div class="product-description">
@@ -118,8 +118,8 @@
                 <div class="specifications-header">
                     <h3>Specifications</h3>
                     <ul class="specifications">
-                        <li>Size: 15"</li>
-                        <li>Weight: 2 lbs</li>
+                        <li>Size: 20"</li>
+                        <li>Weight: 4 lbs</li>
                     </ul>
                 </div>
                 <footer>Specifications valid until 10/04</footer>
@@ -128,9 +128,9 @@
                 <div class="pricing-header">
                     <h3>Pricing</h3>
                     <ul class="pricing">
-                        <li>1: $20</li>
-                        <li>2-10: $16</li>
-                        <li>10-100: $10</li>
+                        <li>1: $53</li>
+                        <li>2-10: $87</li>
+                        <li>10-100: $120</li>
                     </ul>
                 </div>
             </div>
