Added pictures for each car. Changed font family and size

--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
         <div class="product-card-1">
             <div class="header">
                 <header>
-                    <h2>2017 Macbook Pro</h2>
+                    <h2>Old School Mac</h2>
                 </header>    
             </div>
             <div class="section-one">
                 <div class="product-image">
-                <img src="https://www.bhphotovideo.com/images/images2500x2500/apple_muhr2ll_a_13_3_macbook_pro_with_1492890.jpg" alt="Macbook Pro"/>
+                <img src="https://i.pinimg.com/originals/8c/7e/4d/8c7e4dc5b75eb0310d4dff2097377946.jpg" alt="Macbook Pro"/>
                 </div>
                 <div>
                     <div class="product-description">
@@ -151,7 +151,7 @@
                     </div>
 
                     <div class="product-availability">
-                        <p>Available</p>
+                        <p>Unavailable</p>
                     </div>
                 </div>
             </div>
@@ -159,8 +159,8 @@
                 <div class="specifications-header">
                     <h3>Specifications</h3>
                     <ul class="specifications">
-                        <li>Size: 15"</li>
-                        <li>Weight: 2 lbs</li>
+                        <li>Size: 40"</li>
+                        <li>Weight: 15 lbs</li>
                     </ul>
                 </div>
                 <footer>Specifications valid until 10/04</footer>
@@ -169,9 +169,9 @@
                 <div class="pricing-header">
                     <h3>Pricing</h3>
                     <ul class="pricing">
-                        <li>1: $20</li>
-                        <li>2-10: $16</li>
-                        <li>10-100: $10</li>
+                        <li>1: $1</li>
+                        <li>2-10: $2</li>
+                        <li>10-100: $3</li>
                     </ul>
                 </div>
             </div>
