Added soldout logo

--- a/index.html
+++ b/index.html
@@ -175,9 +175,11 @@
                     </ul>
                 </div>
             </div>
+            <div class="SoldOut">
+                <img src="https://raw.githubusercontent.com/morecallan/css102-e6/master/images/soldOut.png" alt="Sold Out"/>
+            </div>
         </div>
     </div>
-    
 </body>
 </html>
 © 2020 GitHub, Inc.
